<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Test your knowledge about Manchester United!" />

        <!--QUESTION 1-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/q1_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/q1_a1_button"
                    android:text="@string/robson"
                    android:textSize="14sp"/>
                <RadioButton
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/q1_a2_button"
                    android:text="@string/keane" />
                <RadioButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/q1_a3_button"
                    android:text="@string/valencia" />

            </RadioGroup>
        </LinearLayout>

        <!--QUESTION 2-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:id="@+id/q2_a1_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seaman" />

            <CheckBox
                android:id="@+id/q2_a1_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deGea" />

            <CheckBox
                android:id="@+id/q2_a1_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edwin" />

        </LinearLayout>

        <!--QUESTION 3-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/album_description_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/q3"
                android:inputType="textCapWords" />

        </LinearLayout>

        <!--QUESTION 4-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/q4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/q1_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/q4_a1_button"
                    android:text="@string/ronaldo"
                    android:textSize="14sp"/>
                <RadioButton
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/q4_a2_button"
                    android:text="@string/rooney" />
                <RadioButton
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/q4_a3_button"
                    android:text="@string/robson" />

            </RadioGroup>
        </LinearLayout>

        <!--QUESTION 5-->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/q5_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/q5_a1_button"
                    android:text="@string/robson"
                    android:textSize="14sp"/>
                <RadioButton
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/q5_a2_button"
                    android:text="@string/saf" />
                <RadioButton
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/q5_a3_button"
                    android:text="@string/giggs" />

            </RadioGroup>
        </LinearLayout>

    </LinearLayout>


</ScrollView>